# cppTest

./: CMakeLists.txt  main.cpp
build_old/: .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
build_old/.cache/clangd/index/: atomic_base.h.F118387B313E4F7F.idx  baseMath.h.1860B19B87B27644.idx  bashMath.h.6973424D446FB5D1.idx  basic_file.h.DBC819E80178CB0E.idx  codecvt.h.AD00AF8B809979BA.idx  execution_defs.h.E29E8739239889C9.idx  fstream.0D712D768CE266DA.idx  invoke.h.DF257F4E308AA93B.idx  main.cpp.9A86A72D5ED746A7.idx  map.65EA531CB9793EA9.idx  memory.D8CFFD50CBC6CA29.idx  node_handle.h.004789CC082EB672.idx  query_result.cpp.32CD07928AC50D91.idx  query_result.h.3BC24CCDF683BC66.idx  search.cpp.F1CE5819CC2ACF71.idx  search.h.9211BD4E05CBC307.idx  set.3DFE59C5471BCE6D.idx  shared_ptr.h.C6BAE9E0392607ED.idx  shared_ptr_atomic.h.7B833B6314FBB991.idx  (+14 more)
build_old/Testing/: TAG
build_old/Testing/20230828-1407/: Test.xml
build_old/Testing/20230829-1713/: Test.xml
build_old/Testing/20230912-1520/: Test.xml
build_old/Testing/20231031-1657/: Test.xml
build_old/Testing/20231102-1720/: Test.xml
build_old/src/: CTestTestfile.cmake  cmake_install.cmake
include/: baseMath.h  myMath.h
include/ptr/: folder.h  has_ptr_pointer.h  has_ptr_value.h  message.h  str_vec.h
include/text_query/: query_result.h  search.h  text_query.h
src/: search.cpp
src/ptr/: folder.cpp  has_ptr_pointer.cpp  has_ptr_value.cpp  message.cpp  str_vec.cpp
src/text_query/: query_result.cpp  text_query.cpp
(+3 files in other folders)
